update and add swagger jdsocs and add sucess message
- rewrote all swagger jsdocs using a better format / wording and double checked everything, added swagger jsdocs in the new foemat to /api/profile/updateavatar and /api/profile/deleteavatar

- added missing success message to the delete avatar controller
